# bazel-demo

./: WORKSPACE  go.mod  go.sum
app/genericapp/: BUILD.bazel  main.go
rpc/helloworld/: BUILD.bazel
