load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "genericapp_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/app/genericapp",
    visibility = ["//visibility:private"],
)

# go_binary(
#     name = "genericapp",
#     embed = [":genericapp_lib"],
#     visibility = ["//visibility:public"],
# )

go_image(
    name = "genericapp",
    srcs = ["main.go"],
)


container_push(
   name = "push_foo",
   image = ":genericapp",
   format = "Docker",
   registry = "index.docker.io",
   repository = "kcollasarundell/genericapp",
   tag = "dev",
    skip_unchanged_digest = True,
)